--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: smolskipkg
-Title: What the Package Does (One Line, Title Case)
+Title: Minha base 
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"))
+    person("Felipe", "Smolski", , "first.last@example.com", role = c("aut", "cre"))
 Description: What the package does (one paragraph).
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
     license
@@ -11,3 +11,8 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 URL: https://github.com/smolski/smolskipkg
 BugReports: https://github.com/smolski/smolskipkg/issues
+Imports:
+  fst
+Depends: 
+    R (>= 3.5)
+LazyData: true
