--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,10 @@
 Package: smolskipkg
-Title: Minha base 
-Version: 0.0.0.9000
+Title: Base 
+Version: 0.0.1.9000
 Authors@R: 
-    person("Felipe", "Smolski", , "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    person("Felipe", "Smolski", ,"felipesmolski@hotmail.com", role = c("aut", "cre"))
+Description: Base de dados.
+License: MIT
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
@@ -16,3 +15,4 @@ Imports:
 Depends: 
     R (>= 3.5)
 LazyData: true
+LazyDataCompression: xz
